# people-tracking

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5392fbd9b8d2_initial_schema.py  d57214663ac6_fix_counters_schema_add_updated_at.py  e699604e4e78_add_polygon_field_to_areas_table.py
app/: main.py
app/api/v1/endpoints/: config.py  stats.py
app/core/: config.py  database.py
app/models/: __init__.py  area.py  counter.py  detection.py
app/schemas/: area.py  config_polygon.py  stats.py
app/services/: area_service.py
app/utils/: helper.py  video_source.py
app/workers/: detector.py
scripts/: run_pipeline.py  setup_area.py  setup_initial.py  test_live_video.py  test_video.py
