[project]
name = "people-tracking"
version = "0.1.0"
description = "Real-time people detection and tracking system"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic",
    "opencv-python",
    "ultralytics",
    "deep-sort-realtime",
    "numpy",
    "requests",
    "python-dotenv"
]

[tool.uv]
dev-dependencies = [
    "pytest"
]
